WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
132495
"arm64 function not 4-byte aligned" warnings when building JSC
https://bugs.webkit.org/show_bug.cgi?id=132495
Summary
"arm64 function not 4-byte aligned" warnings when building JSC
Michael Saboff
Reported
2014-05-02 15:19:33 PDT
Although this appears to be a benign linker warning, we can align explicitly to silence it.
Attachments
Patch for Landing
(1.79 KB, patch)
2014-05-02 15:24 PDT
,
Michael Saboff
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Michael Saboff
Comment 1
2014-05-02 15:21:15 PDT
<
rdar://problem/16746674
>
Michael Saboff
Comment 2
2014-05-02 15:24:26 PDT
Created
attachment 230708
[details]
Patch for Landing Reviewed in person.
Michael Saboff
Comment 3
2014-05-02 15:25:19 PDT
Committed
r168197
: <
http://trac.webkit.org/changeset/168197
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug