"arm64 function not 4-byte aligned" warnings when building JSC https://bugs.webkit.org/show_bug.cgi?id=132495

Reviewed by Geoffrey Garen.

Added ".align 4" for both ARM Thumb2 and ARM 64 to silence the linker.

* llint/LowLevelInterpreter.cpp:


Canonical link: https://commits.webkit.org/150525@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@168197 268f45cc-cd09-0410-ab3c-d52691b4dbfc